--- a/doc/bugs/Discussion_link_not_translated_in_post.mdwn
+++ b/doc/bugs/Discussion_link_not_translated_in_post.mdwn
@@ -61,3 +61,7 @@ can see "Discussion" link, instead of Polish "Dyskusja" link. --Pawel
 
 >> BTW, what about translating buttons to editing page ("Save Page",
 >> "Preview" and "Cancel")? There are still hard-coded :( --Pawel
+
+>>> Those come via the formbuilder form, and currently my best plan for
+>>> them is to add templates for them, as described in [[translation]]
+>>> --[[Joey]]
