--- a/doc/todo/Shorter_feeds.mdwn
+++ b/doc/todo/Shorter_feeds.mdwn
@@ -1,4 +1,11 @@
-It should be possible to control the number of items included in a feed independently of the number of items included on the page (the latter, however, possibly setting an upper limit). This would be particularly useful on archive pages providing a feed. Presently the feed grows huge, if the archive page has no limit on the entries listed on it (as in the list of [all entries][ionfaq] in the Ion FAQ). An alternative useful filter would be filtering by the age of the page.
+It should be possible to control the number of items included in a feed
+independently of the number of items included on the page (the latter,
+however, possibly setting an upper limit). This would be particularly
+useful on archive pages providing a feed. Presently the feed grows huge, if
+the archive page has no limit on the entries listed on it (as in the list
+of [all entries][ionfaq] in the Ion FAQ). An alternative useful filter
+would be filtering by the age of the page.
 
   [ionfaq]: http://iki.fi/tuomov/ion/faq/entries.html
 
+> [[todo/Done]], option name is `feedshow` --[[Joey]]
