--- a/debian/changelog
+++ b/debian/changelog
@@ -15,8 +15,10 @@ ikiwiki (1.42) UNRELEASED; urgency=low
   * Lots of CGI code reorg and cleanup.
   * Avoid using lots of memory when copying large non-html files.
     Yes, you can keep videos in the wiki..
+  * Add feedshow option to allow reducing the number of items included in
+    an rss or atom feed.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  2 Feb 2007 21:59:04 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon,  5 Feb 2007 16:51:10 -0500
 
 ikiwiki (1.41) unstable; urgency=low
 
