--- a/doc/examples/blog/posts.mdwn
+++ b/doc/examples/blog/posts.mdwn
@@ -1,3 +1,3 @@
 Here is a full list of posts to my [[blog|index]].
 
-[[inline pages="*blog/posts/* and !*/Discussion" archive=yes quick=yes]]
+[[inline pages="*blog/posts/* and !*/Discussion" archive=yes feedshow=10 quick=yes]]
