--- a/debian/NEWS
+++ b/debian/NEWS
@@ -4,6 +4,10 @@ ikiwiki (1.42) unstable; urgency=low
   httpauth support on your wiki, you should now enable the anonok plugin,
   instead.
 
+  Third-party plugins that use pagespec_match() should be updated to pass
+  the new third parameter (from) to that function. This is needed for the
+  new relative glob matching to work.
+
  -- Joey Hess <joeyh@debian.org>  Thu,  1 Feb 2007 16:57:59 -0500
 
 ikiwiki (1.34) unstable; urgency=low
