--- a/debian/changelog
+++ b/debian/changelog
@@ -17,8 +17,11 @@ ikiwiki (1.42) UNRELEASED; urgency=low
     Yes, you can keep videos in the wiki..
   * Add feedshow option to allow reducing the number of items included in
     an rss or atom feed.
+  * Patch based on a patch from Ethan to support relative matching in
+    PageSpecs, by using "./". pagespec_match() has grown a new third parameter
+    to support this.
 
- -- Joey Hess <joeyh@debian.org>  Mon,  5 Feb 2007 16:51:10 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue,  6 Feb 2007 15:49:06 -0500
 
 ikiwiki (1.41) unstable; urgency=low
 
