--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -24,7 +24,9 @@ Released 29 April 2006.
 * Improved scalable [[logo]]. _(status: done)_
 * Support for at other revision control systems aside from svn.
   See [[about_rcs_backends]] _(status: supports git, tla, mercurial)_
-* Support for one other markup language, probably restructured text.
-  _(status: done, but the rst plugin needs improvement)_
+* Support for other markup languages than markdown
+  _(status: done with rst, textile, etc. Markdown still works best though.)_
 * No serious known [[bugs]]
 * No severe-to-moderate known [[security]] issues.
+
+Estimated release date for 2.0: 29 April 2007.
