web commit by http://ethan.betacantrips.com/: that's no plugin!

--- a/doc/todo/pagespec_expansions.mdwn
+++ b/doc/todo/pagespec_expansions.mdwn
@@ -61,8 +61,7 @@ and you can see it work at
 >   dependency on a pagespec that matches relative to the page. I made this
 >   changes and it seems to work, new pages are noticed in updates.
 
->> OK, I was kind of flying blind for a lot of those plugins. You would 
->> know better than me.
+>> OK, word.
 
 > * `! $from` fails to match pages named "0" :-)
 
