web commit by JeremyReed: user database tools?

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -162,3 +162,12 @@ Clicking on an old "?" or going to a create link but new Markdown content exists
 >>> discussion, or users/discussion, but not index/discussion, since this
 >>> page already exists. If all the pages existed, it would do the redirect
 >>> thing. --[[Joey]]
+
+----
+
+# User database tools?
+
+Any tool to view user database?
+
+Any tool to edit the user database?
+
