* Add "reverse" option to inline to invert sort orders.

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,8 +20,9 @@ ikiwiki (1.42) UNRELEASED; urgency=low
   * Change based on a patch from Ethan to support relative matching in
     PageSpecs, by using "./".
   * pagespec_match() has grown a new third parameter to support this.
+  * Add "reverse" option to inline to invert sort orders.
 
- -- Joey Hess <joeyh@debian.org>  Tue,  6 Feb 2007 15:49:06 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu,  8 Feb 2007 14:46:17 -0500
 
 ikiwiki (1.41) unstable; urgency=low
 
