--- a/doc/plugins/inline.mdwn
+++ b/doc/plugins/inline.mdwn
@@ -46,3 +46,4 @@ directive:
   itself).
 * `sort` - Controls how inlined pages are sorted. The default, "age" is to
   sort newest pages first. Setting it to "title" will sort pages by title.
+* `reverse` - If set to "yes", causes the sort order to be reversed.
