--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -171,3 +171,20 @@ Any tool to view user database?
 
 Any tool to edit the user database?
 
+> No, but it's fairly easy to write such tools in perl. For example, to
+> list all users in the user database:
+
+	joey@kodama:~/src/joeywiki/.ikiwiki>perl -le 'use Storable; my $userinfo=Storable::retrieve("userdb"); print $_ foreach keys %$userinfo'         
+	http://joey.kitenet.net/
+	foo
+
+> To list each user's email address:
+
+	joey@kodama:~/src/joeywiki/.ikiwiki>perl -le 'use Storable; my $userinfo=Storable::retrieve("userdb"); print $userinfo->{$_}->{email} foreach keys %$userinfo'
+	
+	joey@kitenet.net
+
+> Editing is simply a matter of changing values and calling Storable::store().
+> I've not written actual utilities to do this yet because I've only needed
+> to do it rarely, and the data I've wanted has been different each time.
+> --[[Joey]]
