--- a/doc/bugs/ikiwiki.setup_require_blank_rcs_to_work_as_cgi_only.mdwn
+++ b/doc/bugs/ikiwiki.setup_require_blank_rcs_to_work_as_cgi_only.mdwn
@@ -41,3 +41,6 @@ Should it be documented ?
 >>>>
 >>>> Of course git may be a better fit. It would also be possible to add
 >>>> svk support to ikiwiki, although I've not done it yet. --[[Joey]]
+
+Looks like this is not really a bug, so I'm considering it [[bugs/done]]..
+--[[Joey]]
