--- a/doc/todo/shortcut_with_different_link_text.mdwn
+++ b/doc/todo/shortcut_with_different_link_text.mdwn
@@ -32,11 +32,7 @@ Window System protocol".  --[[JoshTriplett]]
 >>> preprocessor directive first, seems quite confusing since wikilinks work
 >>> the other way around.) --[[JoshTriplett]]
 
-> How about
-
-	\[[xcbgit XML_Schema|src/xcb.xsd]]
-
-> That's the same way round
+> How about [xcbgit XML_Schema|src/xcb.xsd]. That's the same way round
 > as a wikilink, if you look at it the right way. The syntax Josh suggests
 > is not currently possible in ikiwiki.
 > 
