--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,8 @@ ikiwiki (1.42) UNRELEASED; urgency=low
     PageSpecs, by using "./".
   * pagespec_match() has grown a new third parameter to support this.
   * Add "reverse" option to inline to invert sort orders.
+  * Drop the BSD license for the templates and basewiki, and just allow them
+    to be used as close to public domain as possible.
 
  -- Joey Hess <joeyh@debian.org>  Thu,  8 Feb 2007 14:46:17 -0500
 
