--- a/doc/freesoftware.mdwn
+++ b/doc/freesoftware.mdwn
@@ -1,4 +1,6 @@
-ikiwiki is licensed under the terms of the GNU [[GPL]].
+ikiwiki is licensed under the terms of the GNU [[GPL]], version 2 or later.
 
 The parts of ikiwiki that become part of your own wiki (the basewiki pages
-and the [[templates]]) are licensed using a form of the [[BSD]] license.
+and the [[templates]]) are licensed as follows: Redistribution and use in 
+source and compiled forms, with or without modification, are permitted under
+any circumstances. No warranty.
