--- a/debian/changelog
+++ b/debian/changelog
@@ -11,7 +11,7 @@ ikiwiki (1.42) UNRELEASED; urgency=low
     "anonok" plugin. Anyone with a wiki allowing anonymous edits should
     change their configs to enable this new plugin.
   * Add an opendiscussion plugin that allows anonymous users to edit
-    discussion pages, on a wiki that is otherwise wouldn't allow it.
+    discussion pages, on a wiki that otherwise wouldn't allow it.
   * Lots of CGI code reorg and cleanup.
   * Avoid using lots of memory when copying large non-html files.
     Yes, you can keep videos in the wiki..
