--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -3,7 +3,7 @@ Sites that are using ikiwiki include:
 * [This wiki](http://ikiwiki.kitenet.net) (of course!)
 * [[Joey]]'s [homepage](http://kitenet.net/~joey/), including his weblog
 * [Jeroen Schot's homepage/weblog](http://schot.a-eskwadraat.nl)
-* [Kyle's MacLea Genealogy wiki](http://kitenet.net/~kyle/family/wiki)
+* [Kyle's MacLea Genealogy wiki](http://kitenet.net/~kyle/family/wiki) and [Livingstone and MacLea Emigration Registry](http://kitenet.net/~kyle/family/registry)
 * [David's Master's Thesis wiki](https://dipl.black.co.at/wiki/) (german)
 * [Ulrik's small collection of small apps](http://www.student.lu.se/~cif04usv/wiki/)
 * [kite](http://kitenet.net)
