* viewcvs is now viewvc (in Debian unstable), update everything to use the   new name.

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,8 +23,10 @@ ikiwiki (1.42) UNRELEASED; urgency=low
   * Add "reverse" option to inline to invert sort orders.
   * Drop the BSD license for the templates and basewiki, and just allow them
     to be used as close to public domain as possible.
+  * viewcvs is now viewvc (in Debian unstable), update everything to use the
+    new name.
 
- -- Joey Hess <joeyh@debian.org>  Thu,  8 Feb 2007 14:46:17 -0500
+ -- Joey Hess <joeyh@debian.org>  Fri,  9 Feb 2007 00:27:59 -0500
 
 ikiwiki (1.41) unstable; urgency=low
 
