--- a/doc/bugs/diff_links_to_backtrace.mdwn
+++ b/doc/bugs/diff_links_to_backtrace.mdwn
@@ -1,5 +1,5 @@
-The diff links in RecentChanges go to a viewcvs backtrace if the rev in 
-question is when the page was added. Is this a viewcvs bug, or a behavior 
+The diff links in RecentChanges go to a viewvc backtrace if the rev in 
+question is when the page was added. Is this a viewvc bug, or a behavior 
 ikiwiki needs to work around?
   - As a special case, there should certianly be no history link for
     pages generated from the underlaydir as it can never work for them.
