--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -30,7 +30,7 @@ The current development version of ikiwiki can be accessed using subversion at
 `svn://ikiwiki.kitenet.net/ikiwiki/trunk`
 
 The source in subversion can be browsed
-[here](http://ikiwiki.kitenet.net/cgi-bin/viewcvs.cgi/trunk/?root=ikiwiki).
+[here](http://ikiwiki.kitenet.net/cgi-bin/viewvc.cgi/trunk/?root=ikiwiki).
 
 Commits to ikiwiki's source code are now fed into
 [CIA](http://cia.navi.cx/), and can be browsed, subscribed to etc on its
