--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -152,7 +152,7 @@ possibilities, since page edit controls can be changed via plugins.
 ### [[PageHistory]]
 
 Well, sorta. Rather than implementing YA history browser, it can link to
-[[ViewCVS]] or the like to browse the history of a wiki page.
+[[ViewVC]] or the like to browse the history of a wiki page.
 
 ### Full text search
 
