--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -186,7 +186,7 @@ configuration options of their own.
 
   Specifies the url to link to for page history browsing. In the url,
   "\[[file]]" is replaced with the file to browse. It's common to use
-  [[ViewCVS]] for this.
+  [[ViewVC]] for this.
 
 * --adminemail you@yourhost
 
@@ -197,7 +197,7 @@ configuration options of their own.
   Specifies the url to link to for a diff of changes to a page. In the url,
   "\[[file]]" is replaced with the file to browse, "\[[r1]]" is the old
   revision of the page, and "\[[r2]]" is the new revision. It's common to use
-  [[ViewCVS]] for this.
+  [[ViewVC]] for this.
 
 * --exclude regexp
 
