--- a/doc/pagehistory.mdwn
+++ b/doc/pagehistory.mdwn
@@ -1,5 +1,5 @@
 ikiwiki supports adding "History" links to the top of pages to browse the
 revison history of a page. This is enabled by the `historyurl` setting,
-which is used to specify the URL to a web interface such as [[ViewCVS]]
+which is used to specify the URL to a web interface such as [[ViewVC]]
 (for Subversion) or [[Gitweb]]. In that url, "\[[file]]" is replaced with
 the name of the file to view.
