--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -9,6 +9,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=fdobug url="https://bugs.freedesktop.org/show_bug.cgi?id=%s" desc="freedesktop.org bug #%s"]]
 * [[shortcut name=fdolist url="http://lists.freedesktop.org/mailman/listinfo/%s" desc="%s@lists.freedesktop.org"]]
 * [[shortcut name=cpan url="http://search.cpan.org/search?mode=dist&query=%s"]]
+* [[shortcut name=ctan url="http://tug.ctan.org/cgi-bin/ctanPackageInformation.py?id=%s"]]
 * [[shortcut name=iki url="http://ikiwiki.kitenet.net/%s.html"]]
 * [[shortcut name=ljuser url="http://%s.livejournal.com/"]]
 
