--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.42) UNRELEASED; urgency=low
+ikiwiki (1.42) unstable; urgency=low
 
   * Fix several more missing translations of Discussion.
   * Fix for missing backlinks() in pagestats plugin.
@@ -32,7 +32,7 @@ ikiwiki (1.42) UNRELEASED; urgency=low
     (Sorry Josh, this means you can't edit style.css directly anymore,
     although I do appreciate your fixes, actually..)
 
- -- Joey Hess <joeyh@debian.org>  Sat, 10 Feb 2007 15:09:51 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 10 Feb 2007 15:37:39 -0500
 
 ikiwiki (1.41) unstable; urgency=low
 
