web commit by JoshTriplett: Add another shortcut which will require this feature: Debian changelog URLs, which need to turn `packagename` into `p/packagename`.

--- a/doc/todo/simple_text_parsing_or_regex_in_template_or_shortcut.mdwn
+++ b/doc/todo/simple_text_parsing_or_regex_in_template_or_shortcut.mdwn
@@ -1,1 +1,6 @@
-Either [[plugins/template]] or [[plugins/shortcut]] should support some form of very simple text parsing or regex application, to make it possible to write something like `\[[mmlist listname@lists.example.org]]` and have this become <listname@lists.example.org> ([mailman page](http://lists.example.org/mailman/listinfo/listname)).
+Either [[plugins/template]] or [[plugins/shortcut]] should support some form
+of very simple text parsing or regex application, to make it possible to write
+shortcuts like these:
+
+    [[mmlist listname@lists.example.org]] -> <listname@example.org> ([mailman page] (http://lists.example.org/mailman/listinfo/listname)
+    [[debchangelog packagename]] -> [packagename changelog](http://packages.debian.org/changelogs/pool/main/p/packagename/current/changelog)
