web commit by JoshTriplett: Sign.

--- a/doc/todo/shortcut_with_no_url_parameter__44___only_desc.mdwn
+++ b/doc/todo/shortcut_with_no_url_parameter__44___only_desc.mdwn
@@ -6,3 +6,5 @@ allow shortcuts with multiple links, such as the mmlist shortcut proposed on
 [[simple_text_parsing_or_regex_in_template_or_shortcut]], or a comprehensive
 Debian package shortcut which linked to the package page and parenthetically
 to the BTS and PTS.
+
+--[[JoshTriplett]]
