--- a/doc/todo/shortcut_with_no_url_parameter__44___only_desc.mdwn
+++ b/doc/todo/shortcut_with_no_url_parameter__44___only_desc.mdwn
@@ -8,3 +8,5 @@ Debian package shortcut which linked to the package page and parenthetically
 to the BTS and PTS.
 
 --[[JoshTriplett]]
+
+It sounds like you're looking for templates, not shortcuts. --[[Joey]]
