--- a/doc/todo/allow_wiki_syntax_in_commit_messages.mdwn
+++ b/doc/todo/allow_wiki_syntax_in_commit_messages.mdwn
@@ -2,3 +2,8 @@ Commit messages should allow wiki syntax, and RecentChanges should format them
 accordingly.
 
 --[[JoshTriplett]]
+
+That's a neat idea! It would probably have to be only the simpler bits,
+without preprocessor directives -- wouldn't want a commit message inlining
+a whole page into RecentChanges. Of course, it could only use _one_ of the
+available markups, ie the default markdown. --[[Joey]]
