--- a/doc/todo/optional_ability_to_edit_non-wiki_files_through_web_interface.mdwn
+++ b/doc/todo/optional_ability_to_edit_non-wiki_files_through_web_interface.mdwn
@@ -8,3 +8,8 @@ could even allow policies like "you have to have an account to edit non-wiki
 files".
 
 --[[JoshTriplett]]
+
+I'd prefer to handle this with a file upload feature, since the security
+issues it will need to deal with are the same, and the set of non-wiki
+files that can be edited in a text editor is a lot smaller than the set of
+files a user might want to upload. --[[Joey]]
