* Allow plugins to add new types of tests that can be used in PageSpecs. * Add a "conditional" plugin, which allows displaying text if a condition   is true. It is enabled by default so conditional can be used in the   basewiki. * Use conditionals in the template for plugins, so that plugin pages   say if they're currently enabled or not, and in various other places   in the wiki.

--- a/basewiki/helponformatting.mdwn
+++ b/basewiki/helponformatting.mdwn
@@ -72,5 +72,7 @@ To link to any other web page, or to an email address, you can just put the url 
 
 You can also use [[PreProcessorDirective]]s to do additional cool stuff.
 
-Also, if the smiley plugin is enabled in your wiki, you can insert
-[[smileys]] and some other useful symbols.
+[[if test="enabled(smiley)"  then="""
+Also, because this wiki has the smiley plugin enabled, you can
+insert \[[smileys]] and some other useful symbols.
+"""]]
