--- a/doc/plugins/fortune.mdwn
+++ b/doc/plugins/fortune.mdwn
@@ -6,8 +6,10 @@ Usage:
 
 	\[[fortune ]]
 
-If this plugin is enabled, here's a fortune for you:
+[[if test="enabled(fortune)" then="""
+Here's a fortune for you:
 
 ----
 
 [[fortune ]]
+"""]]
