--- a/doc/plugins/polygen.mdwn
+++ b/doc/plugins/polygen.mdwn
@@ -9,10 +9,10 @@ For example:
 It's also possible to specify a starting nonterminal for the grammar by
 including `symbol="text"` in the directive.
 
+[[if test="enabled(polygen)" then="""
 ----
 
-If this plugin is enabled, and polygen is installed, here are a few notes
-about ikiwiki.
+Here are a few notes about ikiwiki, courtesy of polygen:
 
 Ikiwiki is internally based on a [[polygen grammar="designpatterns"]]
 coupled to a [[polygen grammar="designpatterns"]], as described in
@@ -25,3 +25,5 @@ Ikiwiki reviews:
 <li>[[polygen grammar="reviews"]]</li>
 <li>[[polygen grammar="reviews"]]</li>
 </ul>
+
+"""]]
