--- a/doc/plugins/camelcase.mdwn
+++ b/doc/plugins/camelcase.mdwn
@@ -4,6 +4,6 @@ This plugin makes words in CamelCase be treated as a [[WikiLink]]. That is
 to say, any two or more words capitalised and mashed together are assumed
 to be the name of some other page on the wiki, and so become a link.
 
-If this plugin is enabled, here is a link: SandBox
+If this plugin is enabled, this will be a link: SandBox
 
 [[tag type/link]]
