--- a/basewiki/helponformatting.mdwn
+++ b/basewiki/helponformatting.mdwn
@@ -74,5 +74,5 @@ You can also use [[PreProcessorDirective]]s to do additional cool stuff.
 
 [[if test="enabled(smiley)"  then="""
 Also, because this wiki has the smiley plugin enabled, you can
-insert \[[smileys]] and some other useful symbols.
+insert [[smileys]] and some other useful symbols.
 """]]
