clean up orphans list

--- a/doc/plugins/orphans.mdwn
+++ b/doc/plugins/orphans.mdwn
@@ -14,5 +14,5 @@ orphans.
 [[if test="enabled(orphans)" then="""
 Here's a list of orphaned pages on this wiki:
 
-[[orphans ]]
+[[orphans pages="* and !news/* and !todo/* and !bugs/* and !patchqueue/* and !users/* and !examples/*"]]
 """]]
