web commit by http://ethan.betacantrips.com/: hmm, interesting

--- a/doc/patchqueue/index.html_allowed.mdwn
+++ b/doc/patchqueue/index.html_allowed.mdwn
@@ -226,3 +226,5 @@ Note I handle setting the url; slightly differently.
 Also note that an initial "index" is ignored.  I.e. a
 page "A/B/index.html" is treated as "A/B".
 
+> This is actually a pretty cool hack. I'll have to think about
+> whether I like it better than my way though :) --Ethan
